--- a/KDIC/Base.lproj/Main_iPhone.storyboard
+++ b/KDIC/Base.lproj/Main_iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="N02-Iw-FFa">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="NC3-k1-2z9">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
@@ -13,19 +13,20 @@
                         <viewControllerLayoutGuide type="bottom" id="bZv-KQ-0Yn"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ncs-rs-jhK">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" id="3VM-OH-UYL"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="l12-4k-v0j" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-144" y="-781"/>
+            <point key="canvasLocation" x="1064" y="342"/>
         </scene>
-        <!--View Controller - KDIC Radio-->
+        <!--Player View Controller - KDIC Radio-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController storyboardIdentifier="StreamView" title="KDIC Radio" id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="StreamView" title="KDIC Radio" id="vXZ-lx-hvc" customClass="PlayerViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="SQ2-Lg-iJE"/>
                         <viewControllerLayoutGuide type="bottom" id="ZzD-Lk-kI9"/>
@@ -151,7 +152,150 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="255" y="-750"/>
+            <point key="canvasLocation" x="1439" y="342"/>
+        </scene>
+        <!--Navigation Controller - Item-->
+        <scene sceneID="WNZ-y6-37V">
+            <objects>
+                <navigationController definesPresentationContext="YES" id="hRj-hL-NLd" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="qWS-zI-B7u"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" translucent="NO" prompted="NO"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" translucent="NO" id="xhk-dI-Bim">
+                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="0ee-hC-ZBb" kind="relationship" relationship="rootViewController" id="WyL-LQ-7Sa"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vfX-rJ-Ce3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-300" y="-32"/>
+        </scene>
+        <!--Podcast View Controller - Item 1-->
+        <scene sceneID="ciq-e5-AZR">
+            <objects>
+                <tableViewController id="0ee-hC-ZBb" customClass="PodcastViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="sct-2A-bW1">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="Mjd-h3-7aj">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Mjd-h3-7aj" id="JyP-Ds-dSe">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="0ee-hC-ZBb" id="W9J-bD-6tv"/>
+                            <outlet property="delegate" destination="0ee-hC-ZBb" id="GGW-VS-ZNM"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="BcH-Oj-Ib2"/>
+                    <navigationItem key="navigationItem" id="cTr-d9-J2v"/>
+                    <connections>
+                        <segue destination="sQo-07-THK" kind="push" id="NOq-nw-ovA"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aN5-Ka-Zdk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="91" y="-32"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="HiJ-vn-JB0">
+            <objects>
+                <tableViewController id="sQo-07-THK" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="WPC-3Z-120">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="H3r-p4-hg2">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="H3r-p4-hg2" id="07R-Cm-vzN">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="sQo-07-THK" id="lmf-Mp-Qb5"/>
+                            <outlet property="delegate" destination="sQo-07-THK" id="CTK-Dn-s09"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="qQi-p6-QBH"/>
+                    <connections>
+                        <segue destination="N02-Iw-FFa" kind="push" identifier="PodcastSelect" id="GhN-fF-0ba"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rXg-3A-Jgx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="532" y="-32"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="2XJ-Vw-QOG">
+            <objects>
+                <tabBarController definesPresentationContext="YES" id="NC3-k1-2z9" sceneMemberID="viewController">
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="6Yf-gD-ptk">
+                        <rect key="frame" x="129" y="330" width="163" height="49"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="z6B-dz-HSN" kind="relationship" relationship="viewControllers" id="exf-Ik-o7x"/>
+                        <segue destination="hRj-hL-NLd" kind="relationship" relationship="viewControllers" id="Ant-sz-faQ"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dym-ij-h10" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-975" y="275"/>
+        </scene>
+        <!--Navigation Controller - Item-->
+        <scene sceneID="RhP-8T-4qW">
+            <objects>
+                <navigationController definesPresentationContext="YES" id="z6B-dz-HSN" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="vMr-tg-iH7"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" translucent="NO" prompted="NO"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="Ylh-Rt-CpF">
+                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="hSR-9M-f9e" kind="relationship" relationship="rootViewController" id="tza-z0-mFU"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qho-Oz-GHV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-300" y="609"/>
+        </scene>
+        <!--Live Stream View Controller - Item 2-->
+        <scene sceneID="x2v-zH-Wht">
+            <objects>
+                <viewController id="hSR-9M-f9e" customClass="LiveStreamViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="7EU-Bq-Bb7"/>
+                        <viewControllerLayoutGuide type="bottom" id="zik-aw-6SF"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="nxf-oE-iRS">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="UhU-B8-KlA"/>
+                    <navigationItem key="navigationItem" id="RYo-N4-BzU"/>
+                    <connections>
+                        <segue destination="N02-Iw-FFa" kind="push" identifier="LiveStream-to-Player" id="jPH-L0-VIQ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NTk-P1-80K" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="91" y="609"/>
         </scene>
         <!--Schedule View Controller-->
         <scene sceneID="39k-qL-tdg">
@@ -170,7 +314,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NlU-mg-7zz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="316" y="-127"/>
+            <point key="canvasLocation" x="1788" y="342"/>
         </scene>
     </scenes>
     <resources>
@@ -186,4 +330,7 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="GhN-fF-0ba"/>
+    </inferredMetricsTieBreakers>
 </document>
